--- a/Goop/Goop.csproj
+++ b/Goop/Goop.csproj
@@ -31,27 +31,59 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="EnumEx.cs" />
+    <Compile Include="ComponentModel\EnumMetadataAttribute.cs" />
+    <Compile Include="Linq\EnumerableEx.cs" />
+    <Compile Include="ObjectModel\CollectionDebugView.cs" />
+    <Compile Include="ObjectModel\ObservableCollectionBase.cs" />
+    <Compile Include="ObjectModel\ObservableCollectionHelpers.cs" />
+    <Compile Include="ObjectModel\ObservableHashSet.cs" />
+    <Compile Include="ObjectModel\ObservableSortedSet.cs" />
+    <Compile Include="ObjectModel\ReadOnlyObservableCollection.cs" />
     <Compile Include="Wpf\AttachedPropertyUtilities.cs" />
     <Compile Include="Wpf\BindableEnum.cs" />
+    <Compile Include="Wpf\BoolConverters.cs" />
+    <Compile Include="Wpf\Controls\ContextMenuItem.cs" />
     <Compile Include="Wpf\Controls\DataTemplateSelectorDictionary.cs" />
     <Compile Include="Wpf\Controls\EnumComboBox.cs" />
+    <Compile Include="Wpf\Controls\GridViewHelper.cs" />
+    <Compile Include="Wpf\Controls\SelectColumnsPopup.xaml.cs">
+      <DependentUpon>SelectColumnsPopup.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Wpf\EnumToMetadata.cs" />
+    <Compile Include="Wpf\VisualEx.cs" />
     <Compile Include="Wpf\MultiValueConverterExtension.cs" />
     <Compile Include="ComponentModel\ObservableObject.cs" />
     <Compile Include="Wpf\FrameworkElementEx.cs" />
     <Compile Include="Wpf\BoolBox.cs" />
+    <Compile Include="Wpf\ValueConverter.cs" />
     <Compile Include="Wpf\ValueConverterExtension.cs" />
     <Compile Include="Wpf\RoutedCommandUtilities.cs" />
     <Compile Include="Math\MathEx.cs" />
     <Compile Include="Wpf\RoutedEventUtilities.cs" />
     <Compile Include="Wpf\DependencyPropertyUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Xml\Serialization\XmlSerializerEx.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="MoreLinq, Version=2.0.20029.0, Culture=neutral, PublicKeyToken=384d532d7e88985d, processorArchitecture=MSIL">
+      <HintPath>..\..\Wallpaperr\packages\morelinq.2.3.0\lib\net35\MoreLinq.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Xaml" />
+    <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Wpf\Controls\SelectColumnsPopup.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
