fix for file missing from project
project file wasn't saved

--- a/Goop/Goop.csproj
+++ b/Goop/Goop.csproj
@@ -34,6 +34,7 @@
     <Compile Include="ComponentModel\ObservableEx.cs" />
     <Compile Include="EnumEx.cs" />
     <Compile Include="ComponentModel\EnumMetadataAttribute.cs" />
+    <Compile Include="DictionaryEx.cs" />
     <Compile Include="Linq\EnumerableEx.cs" />
     <Compile Include="ObjectModel\CollectionDebugView.cs" />
     <Compile Include="ObjectModel\ObservableCollectionBase.cs" />
